greeter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc
  labels:
    istio.io/use-waypoint: waypoint
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-1
  labels:
    istio.io/use-waypoint: waypoint
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-2
  labels:
    istio.io/use-waypoint: waypoint
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
