greeter/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: greeter
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: greeter-svc
      port: 3001
  rules:
    - backendRefs:
        - name: greeter-svc-1
          port: 3001
          weight: 75
        - name: greeter-svc-2
          port: 3001
          weight: 25
